2014-02-23 tag rel_3_0_27
- aggiunto gestione tipo "newdate"....

2014-02-20 tag rel_3_0_26
- hanno corretto un baco in mysql (utf -> len x 3) per cui ho tolto il workaround relativo in wadocumentazione

2014-02-19 tag rel_3_0_25
- aggiunta possibilita, in fase di edit, aggiungere la riga in fondo oltreche all'inizio della tabella

2014-02-10 tag rel_3_0_24
corretti 2 errori (2!) che impedivano alla tabella di avere la riga dei totali partendo da vuota

2014-02-10 tag rel_3_0_23
- piccola correzione su bottone

2014-01-19 tag rel_3_0_22
- aggiunti (o modificati) metodi magic su warecord e wamodulo
- corretto errori su multiselezione_checkbox
- waselezione: ordinamento lista di default su riempimento rpc (per valore e non per chiave)
- wavaluta: corretto punto che non diventava virgola (in tempo)
- watabella: portato a fattor comune un po' di template xsl
- watabella: corretto errore per cui resettava parametri qs su ricerca rapida
- watabella: cambiato comportamento di pagina precedente/successiva (ma mantiene compatibilità)

2014-01-10 tag rel_3_0_21
- corretto errore su formattazione wavaluta
- aggiunte proprietà automagic a waRecord

2014-01-01 tag rel_3_0_20
- corretto piccoli errori e cambiato metodo larghezza di default delle colonne 
	in esportazione pdf di watabella

2013-11-22 tag rel_3_0_19
- aggiunta gestione waApplicazione::aggiungiElemento XML

2013-11-08 tag rel_3_0_18
- aggiunti tag xml versione librerie xslt 
- corretto errori su driver MySQLi

2013-10-30 tag rel_3_0_17
- aggiunti tag xml relativi alla sezione in waApplicazione

2013-10-25 tag rel_3_0_16
- aggiunta gestione eventi su UI di multiselezione_checkbox

2013-09-17 tag rel_3_0_14
- modificata mandaMail : gestisce exception applicative (altrimenti la versione 5.2 di phpMailer faceva un echo a fronte di exception applicativa... strana gestione...)

2013-08-02 tag rel_3_0_14
- corretto su waDb: velocizzata cancellazione da recordset

2013-08-02 tag rel_3_0_13